# harjoitustyo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  brun.sh  cmake_install.cmake  compile_commands.json  engine.drawio  junk.cpp  maarittelydokumentti.md  tyoaika.txt
.cache/clangd/index/: behavior.cpp.8418405B56CFC589.idx  junk.cpp.51A1ED33476627D8.idx  main.cpp.31AF0B7248017C83.idx  main.cpp.4CF6768FDA4DEF78.idx  thing.cpp.0DF1FD5368ABAEE8.idx  window.cpp.B0FF82ABB2D765E8.idx
app/src/: main.cpp
assets/components/: box_physics.json  box_render.json
assets/entities/: box_entity.json
assets/resources/meshes/: box.mtl
assets/worlds/: world1.json
data/: data_handler.hpp  resource.hpp  world.hpp
data/include/: component.hpp  entity.hpp
include/: runtime.hpp
physics/: physics_component.hpp  physics_system.hpp  physics_utils.hpp
physics/include/: physics_component.hpp  physics_system.hpp  physics_utils.hpp
physics/src/: physics_component.cpp  physics_system.cpp  physics_utils.cpp
render/: render_component.hpp  render_data.hpp  render_group.hpp  render_system.hpp  render_unit.hpp  render_utils.hpp
render/include/: render_component.hpp  render_group.hpp  render_system.hpp  render_unit.hpp  render_utils.hpp
render/src/: render_component.cpp  render_group.cpp  render_system.cpp  render_unit.cpp  render_utils.cpp
runtime/: runtime.hpp
runtime/include/: runtime.hpp
src/: main.cpp
systems/: component.hpp  entity.hpp  system.hpp
systems/include/: entity.hpp  system.hpp
